--- a/style.css
+++ b/style.css
@@ -48,28 +48,39 @@ html {
 }
 
 body {
-    box-sizing: border-box;
+    margin: auto auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5.625rem;
+    max-width: 1098px;
     background: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.6)), url(./img/bg.png);
     background-color: #000;
 }
 
 .logo {
-    margin: 4.75rem auto 5.625rem 7.5rem;
+    margin-top: 4.75rem;
+    width: 172px;
+    height: 38px;
 }
 
 .container {
-    margin-left: 7.5rem;
     display: flex;
     align-items: center;
+    justify-content: left;
     gap: 6.75rem;
+    max-width: 1098px;
+
+    .questions-mobile {
+        display: none;
+    }
 
     & .app-info {
-        header {
+        & header {
             max-width: 510px;
-            min-width: 510px;
             margin-bottom: 2.25rem;
 
-            p {
+            & p {
                 font: var(--overline);
                 background-image: var(--gradient-content);
                 -webkit-background-clip: text;
@@ -78,15 +89,15 @@ body {
                 margin-bottom: .75rem;
             }
 
-            h1 {
+
+            & h1 {
                 font: var(--display-large);
                 color: var(--content-primary);
             }
         }
 
-        .questions {
+        & .questions-desktop {
             max-width: 380px;
-            min-width: 380px;
             display: flex;
             flex-direction: column;
             gap: 2.25rem;
@@ -116,8 +127,8 @@ body {
     }
 
     & .app-form {
-        min-width: 482px;
         max-width: 482px;
+        box-sizing: border-box;
 
         & .title-wrap {
             display: flex;
@@ -160,7 +171,6 @@ body {
                     & input {
                         all: unset;
                         width: 105px;
-                        min-width: 105px;
                         max-width: 105px;
                         height: 56px;
                         border-radius: .5rem;
@@ -252,6 +262,7 @@ body {
 
             & .btn-submit {
                 all: unset;
+                box-sizing: border-box;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -263,6 +274,7 @@ body {
                 color: var(--content-primary);
                 padding: 1rem 1rem;
                 border: 2px solid transparent;
+                cursor: pointer;
 
                 &:hover {
                     background:
@@ -271,5 +283,70 @@ body {
                 }
             }
         }
+    }
+}
+
+@media (max-width: 1100px) {
+    body {
+        box-sizing: border-box;
+        flex-direction: column;
+        align-items: center;
+        padding: 1.5rem;
+        gap: 1rem;
+    }
+
+    .logo {
+        margin-top: 1rem;
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: left;
+        gap: 1rem;
+
+        & .app-info {
+            & header {
+                max-width: 300px;
+                margin-bottom: 1rem;
+                & h1 {
+                    font: var(--display-medium);
+                }
+            }
+
+            & .questions-desktop {
+                display: none;
+            }
+        }
+
+        & .questions-mobile {
+            max-width: 380px;
+            display: flex;
+            flex-direction: column;
+            gap: 2.25rem;
+
+            & .question-item {
+                display: flex;
+            }
+
+            & .question-title {
+                & img {
+                    width: 1.25rem;
+                    height: 1.25rem;
+                    margin-right: .5rem;
+                }
+            }
+
+            & .question {
+                font: var(--paragraph-medium);
+                color: var(--content-brand);
+            }
+
+            & .answer {
+                font: var(--paragraph-small);
+                color: var(--content-secondary);
+            }
+        }
+
     }
 }
